--- a/css/bootstrap-responsive.css
+++ b/css/bootstrap-responsive.css
@@ -1069,7 +1069,8 @@
   }
   .header, .follow_us {text-align:center;
   }
-  
+  .follow_us ul li:first-child {margin-left:0;
+  } 
   
   .camera_prev {left: 25px;
   }
